--- a/LandingPages/landing-page-1.css
+++ b/LandingPages/landing-page-1.css
@@ -55,10 +55,11 @@ a, .text .description{
     color: #E5E7EB;
     font-size: 18px;
 }
-button{
+.text button{
     border-radius: 4px;
     border: none;
-    padding: 3px 15px;
+    padding: 10px 25px;
+    margin-top: 15px;
 }
 .information-container .heading{
     font-size: 36px;
