--- a/IntermediateHTMLCSS/Positioning/Fixed/style.css
+++ b/IntermediateHTMLCSS/Positioning/Fixed/style.css
@@ -1,8 +1,7 @@
 body{
   display: flex;
   justify-content: center;
-  align-items: center;
-  min-height: 100vh;
+  height: 200vh;
 }
 .container{
   background-color: blue;
@@ -15,6 +14,9 @@ body{
 .box1{
   background-color: yellow;
   flex:1;
+  position: fixed;
+  width: 300px;
+  top: 200px;
 }
 .box2{
   background-color: red;
