--- a/IntermediateHTMLCSS/Positioning/Sticky/style.css
+++ b/IntermediateHTMLCSS/Positioning/Sticky/style.css
@@ -10,6 +10,9 @@ body{
   height: 300px;
   display: flex;
   flex-direction: column;
+  position: sticky;
+  top: 0;
+  margin-top: 50px;
 }
 .box1{
   background-color: yellow;
